--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "migrate" : "node migrate.js"
+    "migrate": "node migrate.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "mongodb": "^3.3.5",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "compression": "^1.7.1"
   }
 }
